[gd_scene load_steps=3 format=3 uid="uid://cmiyfqvmatgj3"]

[ext_resource type="Script" path="res://scenes/states/connected/connected.gd" id="1_73inq"]
[ext_resource type="Script" path="res://classes/log/log.gd" id="1_ebrmx"]

[node name="Connected" type="Node"]
script = ExtResource("1_73inq")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.5
offset_right = 33.5
grow_horizontal = 2
grow_vertical = 2

[node name="UserNameLineEdit" type="LineEdit" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="PasswordLineEdit" type="LineEdit" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Login" type="Button" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Login
"

[node name="Register" type="Button" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Register
"

[node name="Log" type="RichTextLabel" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
script = ExtResource("1_ebrmx")

[connection signal="pressed" from="UI/VBoxContainer/HBoxContainer/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/HBoxContainer/Register" to="." method="_on_register_pressed"]
